--- a/Terms & Conditions/Terms & Conditions.html
+++ b/Terms & Conditions/Terms & Conditions.html
@@ -9,8 +9,48 @@
     <title>Terms & Conditions</title>
 </head>
 <body>
+    <div>
+<span class="form">
+    <svg width="321" height="295" viewBox="0 0 321 295" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g opacity="0.696925">
+        <rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(-1 0 0 1 262 -56)" fill="url(#paint0_linear_1032_5573)"/>
+        <rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(-1 0 0 1 330 67)" fill="url(#paint1_linear_1032_5573)"/>
+        <rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(-1 0 0 1 234 136)" fill="url(#paint2_linear_1032_5573)"/>
+        <rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(-1 0 0 1 159 -20)" fill="url(#paint3_linear_1032_5573)"/>
+        <rect opacity="0.4" width="158" height="160" rx="20.015" transform="matrix(0 -1 -1 0 373 23)" fill="url(#paint4_linear_1032_5573)"/>
+        <rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(0 -1 -1 0 452 200)" fill="url(#paint5_linear_1032_5573)"/>
+        </g>
+        <defs>
+        <linearGradient id="paint0_linear_1032_5573" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#4994FF"/>
+        <stop offset="1" stop-color="white" stop-opacity="0.01"/>
+        </linearGradient>
+        <linearGradient id="paint1_linear_1032_5573" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#4994FF"/>
+        <stop offset="1" stop-color="white" stop-opacity="0.01"/>
+        </linearGradient>
+        <linearGradient id="paint2_linear_1032_5573" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#4994FF"/>
+        <stop offset="1" stop-color="white" stop-opacity="0.01"/>
+        </linearGradient>
+        <linearGradient id="paint3_linear_1032_5573" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#4994FF"/>
+        <stop offset="1" stop-color="white" stop-opacity="0.01"/>
+        </linearGradient>
+        <linearGradient id="paint4_linear_1032_5573" x1="130.625" y1="-176.348" x2="-105.181" y2="28.5568" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#4994FF"/>
+        <stop offset="1" stop-color="white" stop-opacity="0.01"/>
+        </linearGradient>
+        <linearGradient id="paint5_linear_1032_5573" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#4994FF"/>
+        <stop offset="1" stop-color="white" stop-opacity="0.01"/>
+        </linearGradient>
+        </defs>
+        </svg>
+</span>
+<!---------------------------------------------------------------------------------->
 
-    <div class="cotinar">
+<div class="cotinar">
         <div>
     <h1 class="title">Terms & Conditions</h1>
 </div>
@@ -54,7 +94,53 @@ evolved over the years, sometimes by accident, sometimes on purpose (injected hu
 There are many variations of passages of Lorem Ipsum available, but the majority have suffere    
 </p>
 </div>
+<!------------------------------------------------------------------------------------------------------>
+<span class="form2">
+    <svg width="321" height="331" viewBox="0 0 321 331" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g opacity="0.696925">
+<rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(1 0 0 -1 59 351)" fill="url(#paint0_linear_1032_5583)"/>
+<rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(1 0 0 -1 -9 228)" fill="url(#paint1_linear_1032_5583)"/>
+<rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(1 0 0 -1 87 159)" fill="url(#paint2_linear_1032_5583)"/>
+<rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(1 0 0 -1 162 315)" fill="url(#paint3_linear_1032_5583)"/>
+<rect opacity="0.4" width="158" height="160" rx="20.015" transform="matrix(0 1 1 0 -52 272)" fill="url(#paint4_linear_1032_5583)"/>
+<rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(0 1 1 0 139 312)" fill="url(#paint5_linear_1032_5583)"/>
+<rect opacity="0.4" width="159" height="159" rx="20.015" transform="matrix(0 1 1 0 -131 95)" fill="url(#paint6_linear_1032_5583)"/>
+</g>
+<defs>
+<linearGradient id="paint0_linear_1032_5583" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+<linearGradient id="paint1_linear_1032_5583" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+<linearGradient id="paint2_linear_1032_5583" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+<linearGradient id="paint3_linear_1032_5583" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+<linearGradient id="paint4_linear_1032_5583" x1="130.625" y1="-176.348" x2="-105.181" y2="28.5568" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+<linearGradient id="paint5_linear_1032_5583" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+<linearGradient id="paint6_linear_1032_5583" x1="131.452" y1="-175.245" x2="-103.274" y2="31.3021" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4994FF"/>
+<stop offset="1" stop-color="white" stop-opacity="0.01"/>
+</linearGradient>
+ </defs>
+ </svg>
 
-</div>
+</span>
+
+
+</div></div>
 </body>
 </html>
