--- a/Dashboard/Dashboard.html
+++ b/Dashboard/Dashboard.html
@@ -50,7 +50,7 @@
                         </defs>
                     </svg>
                 </a>
-                <div>
+                <div class="menu">
                     <div>
                         <ul>
                             <li class="aside_li0">
@@ -170,14 +170,17 @@
 
                 </div>
 
-                <footer class="aside-foot">
+                <div class="aside-foot">
                     <hr>
                     <p>© 2021 Smart Rx</p>
                     <br>
                     <p>Smart Rx is medical management for all doctors, patient & Staff.</p>
-                </footer>
+                </div>
             </aside>
         </div>
+<!---***************************************************************************************************************************************************************-->
+<!---***************************************************************************************************************************************************************-->
+<!---***************************************************************************************************************************************************************-->
         <div class="page-container">
 <section class="search-section">
                 <nav class="SmartRx-bar">
@@ -256,9 +259,7 @@
                     </div>
                 </nav>
 </section>
-<!---***************************************************************************************************************************************************************-->
-<!---***************************************************************************************************************************************************************-->
-<!---***************************************************************************************************************************************************************-->
+
 <section class="news-section">
 <div class="left-div">
  <div class="fristpag">
@@ -578,7 +579,7 @@ branding corporation or a regular down at heel tatty.</p>
  </span>
 
 </div>
-<br><br><br>
+<div class="two-divs-in-one">
 <div class="secondpag">
 <div class="Appointments-img">
 <svg width="56" height="56" viewBox="0 0 56 56" fill="none"
@@ -640,7 +641,7 @@ branding corporation or a regular down at heel tatty.</p>
                         </p>
 </div>
 </div>
-
+</div>
 
 <div class="right-div">              
                      <div>
@@ -781,6 +782,7 @@ branding corporation or a regular down at heel tatty.</p>
                 <p class="percent-word">You succeed earn <b class="percent-dolar">$240</b> today, its higher than <br>
                     yesterday</p>
                 <br>
+                <div class="arrows">
                 <span class="frist-rise">
                     <p class="arrow-title">
                         Target
@@ -821,6 +823,7 @@ branding corporation or a regular down at heel tatty.</p>
                         </svg>
                     </p>
                 </span>
+            </div>
             </div>
             
 <div class="right-tar-div"> 
@@ -941,6 +944,7 @@ branding corporation or a regular down at heel tatty.</p>
 <!---***************************************************************************************************************************************************************-->
 
 <section class="appointments-section">
+    <div class="appointments">
                 <div class="title0">
                     <p>Today, february 20</p>
                     <p>Upcoming Appointments</p>
@@ -959,13 +963,14 @@ branding corporation or a regular down at heel tatty.</p>
                     </td>
                     <td>Actions</td>
                 </table>
-
+</div>
  </section>
 
 
 
             <!--************************************************************************************************************************************************************************************-->
 
+            
 
 
         </div>
